# ChangeLog for genkernel
# Copyright: 
# - 2003-2008 Gentoo Foundation
# - 2008-2011 Various authors (see AUTHORS)
# Distributed under the GPL v2
# $Id$

  06 Feb 2012; Robin H. Johnson <robbat2@gentoo.org> gen_initramfs.sh:
  Refactor copy_binaries and multipath slightly for ease of usage and readability.

  06 Feb 2012: Richard Yao <ryao@cs.stonybrook.edu> gen_initramfs.sh:
  Refactor multipath initramfs generation using copy_binaries.

  06 Feb 2012: Richard Yao <ryao@cs.stonybrook.edu> gen_initramfs.sh:
  copy_binaries utility function for putting binaries and librares into
  initramfs (see git commit for full details).

  06 Feb 2012; Robin H. Johnson <robbat2@gentoo.org> defaults/initrd.scripts:
  Support virtio devices, and provide fallback of all remaining devices.

  03 Feb 2012; Sebastian Pipping <sping@gentoo.org> defaults/initrd.scripts:
  Support SD card readers. Patch by Rick Farina

  24 Jan 2012; Sebastian Pipping <sping@gentoo.org> .gitignore, genkernel:
  Bump version to 3.4.24

  24 Jan 2012; Sebastian Pipping <sping@gentoo.org> arch/alpha/kernel-config,
  arch/ia64/kernel-config, arch/ppc/kernel-config, arch/sparc64/kernel-config,
  arch/x86/kernel-config:
  Unset CONFIG_SYSFS_DEPRECATED for udev (bug #335763)

  15 Jan 2012; Sebastian Pipping <sping@gentoo.org> genkernel:
  Bump version to 3.4.23.1

  14 Jan 2012; Sebastian Pipping <sping@gentoo.org> defaults/busy-config:
  Re-activate mdstart in busybox config

  14 Jan 2012; Sebastian Pipping <sping@gentoo.org>
  +patches/busybox/1.19.3/busybox-1.19.3-mdstart.patch:
  Port mdstart patch to busybox 1.19.3

  13 Jan 2012; Sebastian Pipping <sping@gentoo.org> defaults/busy-config:
  Busybox config: Enable verbose usage

  13 Jan 2012; Sebastian Pipping <sping@gentoo.org> defaults/busy-config:
  Update busybox config using "yes '' | make oldconfig"

  13 Jan 2012; Sebastian Pipping <sping@gentoo.org> genkernel:
  Bump version to 3.4.23

  13 Jan 2012; Sebastian Pipping <sping@gentoo.org>