@@ -220,7 +220,7 @@ CONFIG_FALSE=y
 CONFIG_FSYNC=y
 CONFIG_HEAD=y
 # CONFIG_FEATURE_FANCY_HEAD is not set
-# CONFIG_HOSTID is not set
+CONFIG_HOSTID=y
 # CONFIG_INSTALL is not set
 # CONFIG_FEATURE_INSTALL_LONG_OPTIONS is not set
 CONFIG_LN=y
